--- a/html/admin_dashboard.html
+++ b/html/admin_dashboard.html
@@ -19,7 +19,7 @@
         <li><a href="#manage-users">Manage Users</a></li>
         <li><a href="#view-stats">View Statistics</a></li>
         <li><a href="#settings">Settings</a></li>
-        <li><a href="/html/login.html" id="logout">Logout</a></li>
+        <li><a href="/index.html" id="logout">Logout</a></li>
       </ul>
     </div>
 
@@ -75,7 +75,7 @@
 
       <div id="settings" class="section">
         <h2>Settings</h2>
-        <p>Admin settings can be managed here.</p>
+        <p></p>
       </div>
     </div>
     <script src="/js/admin_dashboard.js"></script>
